src/PoluParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 Polu.g 2014-05-12 00:44:04

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

/** A simple dynamically-typed language that smacks of Python.
 *  This builds a tree, then we'll interpret it with a tree grammar
 *  Build a convential symbol table while parsing.  Save
 *  symbol ptrs in AST nodes.
 */
public class PoluParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARGS", "FIELDS", "BLOCK", "CALL", "IF", "ASSIGN", "PRINT", "WHILE", "RETURN", "DEF", "ADD", "SUB", "MUL", "EQ", "LT", "STRUCT", "DOT", "NEW", "ID", "NL", "INT", "CHAR", "FLOAT", "STRING", "LETTER", "WS", "SL_COMMENT", "'{'", "','", "'}'", "'('", "')'", "':'", "'else'", "'.'"
    };
    public static final int LT=18;
    public static final int DEF=13;
    public static final int WHILE=11;
    public static final int LETTER=28;
    public static final int CHAR=25;
    public static final int NEW=21;
    public static final int STRUCT=19;
    public static final int SUB=15;
    public static final int FLOAT=26;
    public static final int INT=24;
    public static final int FIELDS=5;
    public static final int ID=22;
    public static final int EOF=-1;
    public static final int MUL=16;
    public static final int PRINT=10;
    public static final int IF=8;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=29;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int BLOCK=6;
    public static final int SL_COMMENT=30;
    public static final int RETURN=12;
    public static final int ASSIGN=9;
    public static final int ARGS=4;
    public static final int CALL=7;
    public static final int NL=23;
    public static final int EQ=17;
    public static final int DOT=20;
    public static final int STRING=27;
    public static final int ADD=14;

    // delegates
    // delegators


        public PoluParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PoluParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return PoluParser.tokenNames; }
    public String getGrammarFileName() { return "Polu.g"; }


        Interpreter interp;
        Scope currentScope;
        public PoluParser(TokenStream input, Interpreter interp) {
            this(input);
            this.interp = interp;
            currentScope = interp.globalScope;
        }


    public static class program_return extends ParserRuleReturnScope {
        PoluAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // Polu.g:25:1: program : ( functionDefinition | statement )+ EOF -> ^( BLOCK ( statement )+ ) ;
    public final PoluParser.program_return program() throws RecognitionException {
        PoluParser.program_return retval = new PoluParser.program_return();
        retval.start = input.LT(1);

        PoluAST root_0 = null;

        Token EOF3=null;
        PoluParser.functionDefinition_return functionDefinition1 = null;

        PoluParser.statement_return statement2 = null;


        PoluAST EOF3_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        RewriteRuleSubtreeStream stream_functionDefinition=new RewriteRuleSubtreeStream(adaptor,"rule functionDefinition");
        try {
            // Polu.g:26:2: ( ( functionDefinition | statement )+ EOF -> ^( BLOCK ( statement )+ ) )
            // Polu.g:26:4: ( functionDefinition | statement )+ EOF
            {
            // Polu.g:26:4: ( functionDefinition | statement )+
            int cnt1=0;
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==DEF) ) {
                    alt1=1;
                }
                else if ( (LA1_0==IF||(LA1_0>=PRINT && LA1_0<=RETURN)||LA1_0==STRUCT||(LA1_0>=ID && LA1_0<=NL)) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // Polu.g:26:6: functionDefinition
            	    {
            	    pushFollow(FOLLOW_functionDefinition_in_program124);
            	    functionDefinition1=functionDefinition();

            	    state._fsp--;

            	    stream_functionDefinition.add(functionDefinition1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // Polu.g:26:27: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_program128);
            	    statement2=statement();

            	    state._fsp--;

            	    stream_statement.add(statement2.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_program133);  
            stream_EOF.add(EOF3);



            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (PoluAST)adaptor.nil();
            // 27:3: -> ^( BLOCK ( statement )+ )
            {
                // Polu.g:27:6: ^( BLOCK ( statement )+ )
                {
                PoluAST root_1 = (PoluAST)adaptor.nil();
                root_1 = (PoluAST)adaptor.becomeRoot((PoluAST)adaptor.create(BLOCK, "BLOCK"), root_1);

                if ( !(stream_statement.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (PoluAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PoluAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class structDefinition_return extends ParserRuleReturnScope {
        PoluAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "structDefinition"
    // Polu.g:30:1: structDefinition : 'struct' name= ID '{' vardef ( ',' vardef )* '}' NL ->;
    public final PoluParser.structDefinition_return structDefinition() throws RecognitionException {
        PoluParser.structDefinition_return retval = new PoluParser.structDefinition_return();
        retval.start = input.LT(1);

        PoluAST root_0 = null;

        Token name=null;
        Token string_literal4=null;
        Token char_literal5=null;
        Token char_literal7=null;
        Token char_literal9=null;
        Token NL10=null;
        PoluParser.vardef_return vardef6 = null;

        PoluParser.vardef_return vardef8 = null;


        PoluAST name_tree=null;
        PoluAST string_literal4_tree=null;
        PoluAST char_literal5_tree=null;
        PoluAST char_literal7_tree=null;
        PoluAST char_literal9_tree=null;
        PoluAST NL10_tree=null;
        RewriteRuleTokenStream stream_STRUCT=new RewriteRuleTokenStream(adaptor,"token STRUCT");
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleSubtreeStream stream_vardef=new RewriteRuleSubtreeStream(adaptor,"rule vardef");
        try {
            // Polu.g:31:5: ( 'struct' name= ID '{' vardef ( ',' vardef )* '}' NL ->)
            // Polu.g:31:9: 'struct' name= ID '{' vardef ( ',' vardef )* '}' NL
            {
            string_literal4=(Token)match(input,STRUCT,FOLLOW_STRUCT_in_structDefinition162);  
            stream_STRUCT.add(string_literal4);

            name=(Token)match(input,ID,FOLLOW_ID_in_structDefinition166);  
            stream_ID.add(name);

            char_literal5=(Token)match(input,31,FOLLOW_31_in_structDefinition168);  
            stream_31.add(char_literal5);


                	StructSymbol ss = new StructSymbol((name!=null?name.getText():null), currentScope);
                    currentScope.define(ss); // def struct in current scope
                    currentScope = ss;       // set current scope to struct scope
            		
            pushFollow(FOLLOW_vardef_in_structDefinition180);
            vardef6=vardef();

            state._fsp--;

            stream_vardef.add(vardef6.getTree());
            // Polu.g:37:10: ( ',' vardef )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==32) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // Polu.g:37:11: ',' vardef
            	    {
            	    char_literal7=(Token)match(input,32,FOLLOW_32_in_structDefinition183);  
            	    stream_32.add(char_literal7);

            	    pushFollow(FOLLOW_vardef_in_structDefinition185);
            	    vardef8=vardef();

            	    state._fsp--;

            	    stream_vardef.add(vardef8.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            char_literal9=(Token)match(input,33,FOLLOW_33_in_structDefinition189);  
            stream_33.add(char_literal9);

            NL10=(Token)match(input,NL,FOLLOW_NL_in_structDefinition191);  
            stream_NL.add(NL10);

            currentScope = currentScope.getEnclosingScope();


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (PoluAST)adaptor.nil();
            // 39:3: ->
            {
                root_0 = null;
            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (PoluAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PoluAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "structDefinition"

    public static class functionDefinition_return extends ParserRuleReturnScope {
        PoluAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "functionDefinition"
    // Polu.g:42:1: functionDefinition : 'def' ID '(' ( vardef ( ',' vardef )* )? ')' slist ->;
    public final PoluParser.functionDefinition_return functionDefinition() throws RecognitionException {
        PoluParser.functionDefinition_return retval = new PoluParser.functionDefinition_return();
        retval.start = input.LT(1);

        PoluAST root_0 = null;

        Token string_literal11=null;
        Token ID12=null;
        Token char_literal13=null;
        Token char_literal15=null;
        Token char_literal17=null;
        PoluParser.vardef_return vardef14 = null;

        PoluParser.vardef_return vardef16 = null;

        PoluParser.slist_return slist18 = null;


        PoluAST string_literal11_tree=null;
        PoluAST ID12_tree=null;
        PoluAST char_literal13_tree=null;
        PoluAST char_literal15_tree=null;
        PoluAST char_literal17_tree=null;
        RewriteRuleTokenStream stream_DEF=new RewriteRuleTokenStream(adaptor,"token DEF");
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_vardef=new RewriteRuleSubtreeStream(adaptor,"rule vardef");
        RewriteRuleSubtreeStream stream_slist=new RewriteRuleSubtreeStream(adaptor,"rule slist");
        try {
            // Polu.g:43:2: ( 'def' ID '(' ( vardef ( ',' vardef )* )? ')' slist ->)
            // Polu.g:43:4: 'def' ID '(' ( vardef ( ',' vardef )* )? ')' slist
            {
            string_literal11=(Token)match(input,DEF,FOLLOW_DEF_in_functionDefinition214);  
            stream_DEF.add(string_literal11);

            ID12=(Token)match(input,ID,FOLLOW_ID_in_functionDefinition216);  
            stream_ID.add(ID12);


                    FunctionSymbol fs = new FunctionSymbol((ID12!=null?ID12.getText():null),currentScope);
                    currentScope.define(fs); // def method in globals
                    currentScope = fs;       // set current scope to method scope
                    
            char_literal13=(Token)match(input,34,FOLLOW_34_in_functionDefinition231);  
            stream_34.add(char_literal13);

            // Polu.g:49:13: ( vardef ( ',' vardef )* )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ID) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // Polu.g:49:14: vardef ( ',' vardef )*
                    {
                    pushFollow(FOLLOW_vardef_in_functionDefinition234);
                    vardef14=vardef();

                    state._fsp--;

                    stream_vardef.add(vardef14.getTree());
                    // Polu.g:49:21: ( ',' vardef )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==32) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // Polu.g:49:22: ',' vardef
                    	    {
                    	    char_literal15=(Token)match(input,32,FOLLOW_32_in_functionDefinition237);  
                    	    stream_32.add(char_literal15);

                    	    pushFollow(FOLLOW_vardef_in_functionDefinition239);
                    	    vardef16=vardef();

                    	    state._fsp--;

                    	    stream_vardef.add(vardef16.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;

            }

            char_literal17=(Token)match(input,35,FOLLOW_35_in_functionDefinition246);  
            stream_35.add(char_literal17);

            currentScope = new LocalScope(fs);
            pushFollow(FOLLOW_slist_in_functionDefinition254);
            slist18=slist();

            state._fsp--;

            stream_slist.add(slist18.getTree());

            		fs.blockAST = (slist18!=null?((PoluAST)slist18.tree):null);
            		currentScope = currentScope.getEnclosingScope();
            		currentScope = currentScope.getEnclosingScope();
            		


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (PoluAST)adaptor.nil();
            // 57:3: ->
            {
                root_0 = null;
            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (PoluAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PoluAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "functionDefinition"

    public static class slist_return extends ParserRuleReturnScope {
        PoluAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "slist"
    // Polu.g:60:1: slist : ( ':' NL ( statement )+ 'end' NL -> ^( BLOCK ( statement )+ ) | statement -> ^( BLOCK statement ) );
    public final PoluParser.slist_return slist() throws RecognitionException {
        PoluParser.slist_return retval = new PoluParser.slist_return();
        retval.start = input.LT(1);

        PoluAST root_0 = null;

        Token char_literal19=null;
        Token NL20=null;
        Token string_literal22=null;
        Token NL23=null;
        PoluParser.statement_return statement21 = null;

        PoluParser.statement_return statement24 = null;


        PoluAST char_literal19_tree=null;
        PoluAST NL20_tree=null;
        PoluAST string_literal22_tree=null;
        PoluAST NL23_tree=null;
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleTokenStream stream_DOT=new RewriteRuleTokenStream(adaptor,"token DOT");
        RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // Polu.g:61:2: ( ':' NL ( statement )+ 'end' NL -> ^( BLOCK ( statement )+ ) | statement -> ^( BLOCK statement ) )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==36) ) {
                alt6=1;
            }
            else if ( (LA6_0==IF||(LA6_0>=PRINT && LA6_0<=RETURN)||LA6_0==STRUCT||(LA6_0>=ID && LA6_0<=NL)) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // Polu.g:61:4: ':' NL ( statement )+ 'end' NL
                    {
                    char_literal19=(Token)match(input,36,FOLLOW_36_in_slist274);  
                    stream_36.add(char_literal19);

                    NL20=(Token)match(input,NL,FOLLOW_NL_in_slist276);  
                    stream_NL.add(NL20);

                    // Polu.g:61:11: ( statement )+
                    int cnt5=0;
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==IF||(LA5_0>=PRINT && LA5_0<=RETURN)||LA5_0==STRUCT||(LA5_0>=ID && LA5_0<=NL)) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // Polu.g:61:11: statement
                    	    {
                    	    pushFollow(FOLLOW_statement_in_slist278);
                    	    statement21=statement();

                    	    state._fsp--;

                    	    stream_statement.add(statement21.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt5 >= 1 ) break loop5;
                                EarlyExitException eee =
                                    new EarlyExitException(5, input);
                                throw eee;
                        }
                        cnt5++;
                    } while (true);

                    string_literal22=(Token)match(input,DOT,FOLLOW_DOT_in_slist281);  
                    stream_DOT.add(string_literal22);

                    NL23=(Token)match(input,NL,FOLLOW_NL_in_slist283);  
                    stream_NL.add(NL23);



                    // AST REWRITE
                    // elements: statement
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (PoluAST)adaptor.nil();
                    // 61:31: -> ^( BLOCK ( statement )+ )
                    {
                        // Polu.g:61:34: ^( BLOCK ( statement )+ )
                        {
                        PoluAST root_1 = (PoluAST)adaptor.nil();
                        root_1 = (PoluAST)adaptor.becomeRoot((PoluAST)adaptor.create(BLOCK, "BLOCK"), root_1);

                        if ( !(stream_statement.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_statement.hasNext() ) {
                            adaptor.addChild(root_1, stream_statement.nextTree());

                        }
                        stream_statement.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // Polu.g:62:4: statement
                    {
                    pushFollow(FOLLOW_statement_in_slist297);
                    statement24=statement();

                    state._fsp--;

                    stream_statement.add(statement24.getTree());


                    // AST REWRITE
                    // elements: statement
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (PoluAST)adaptor.nil();
                    // 62:18: -> ^( BLOCK statement )
                    {
                        // Polu.g:62:21: ^( BLOCK statement )
                        {
                        PoluAST root_1 = (PoluAST)adaptor.nil();
                        root_1 = (PoluAST)adaptor.becomeRoot((PoluAST)adaptor.create(BLOCK, "BLOCK"), root_1);

                        adaptor.addChild(root_1, stream_statement.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (PoluAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (PoluAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "slist"

    public static class statement_return extends ParserRuleReturnScope {
        PoluAST tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // Polu.g:65:1: statement : ( structDefinition | qid '=' expr NL -> ^( '=' qid expr ) | 'return' expr NL -> ^( 'return' expr ) | 'print' expr NL -> ^( 'print' expr ) | 'if' expr c= slist ( 'else' el= slist )? -> ^( 'if' expr $c ( $el)? ) | 'while' expr slist -> ^( 'while' expr slist ) | call NL -> call | NL ->);
    public final PoluParser.statement_return statement() throws RecognitionException {
        PoluParser.statement_return retval = new PoluParser.statement_return();
        retval.start = input.LT(1);

        PoluAST root_0 = null;

        Token char_literal27=null;
        Token NL29=null;
        Token string_literal30=null;
        Token NL32=null;
        Token string_literal33=null;
        Token NL35=null;
        Token string_literal36=null;
        Token string_literal38=null;
        Token string_literal39=null;
        Token NL43=null;
        Token NL44=null;
        PoluParser.slist_return c = null;

        PoluParser.slist_return el = null;

        PoluParser.structDefinition_return structDefinition25 = null;

        PoluParser.qid_return qid26 = null;

        PoluParser.expr_return expr28 = null;

        PoluParser.expr_return expr31 = null;

        PoluParser.expr_return expr34 = null;

        PoluParser.expr_return expr37 = null;

        PoluParser.expr_return expr40 = null;

        PoluParser.slist_return slist41 = null;

        PoluParser.call_return call42 = null;


        PoluAST char_literal27_tree=null;
        PoluAST NL29_tree=null;
        PoluAST string_literal30_tree=null;
        PoluAST NL32_tree=null;
        PoluAST string_literal33_tree=null;
        PoluAST NL35_tree=null;
        PoluAST string_literal36_tree=null;
        PoluAST string_literal38_tree=null;
        PoluAST string_literal39_tree=null;
        PoluAST NL43_tree=null;
        PoluAST NL44_tree=null;
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleTokenStream stream_WHILE=new RewriteRuleTokenStream(adaptor,"token WHILE");
        RewriteRuleTokenStream stream_PRINT=new RewriteRuleTokenStream(adaptor,"token PRINT");
        RewriteRuleTokenStream stream_IF=new RewriteRuleTokenStream(adaptor,"token IF");
        RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
        RewriteRuleTokenStream stream_RETURN=new RewriteRuleTokenStream(adaptor,"token RETURN");
        RewriteRuleTokenStream stream_ASSIGN=new RewriteRuleTokenStream(adaptor,"token ASSIGN");
        RewriteRuleSubtreeStream stream_call=new RewriteRuleSubtreeStream(adaptor,"rule call");
        RewriteRuleSubtreeStream stream_qid=new RewriteRuleSubtreeStream(adaptor,"rule qid");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        RewriteRuleSubtreeStream stream_slist=new RewriteRuleSubtreeStream(adaptor,"rule slist");
        try {
            // Polu.g:66:2: ( structDefinition | qid '=' expr NL -> ^( '=' qid expr ) | 'return' expr NL -> ^( 'return' expr ) | 'print' expr NL -> ^( 'print' expr ) | 'if' expr c= slist ( 'else' el= slist )? -> ^( 'if' expr $c ( $el)? ) | 'while' expr slist -> ^( 'while' expr slist ) | call NL -> call | NL ->)
            int alt8=8;
            alt8 = dfa8.predict(input);
            switch (alt8) {
                case 1 :
                    // Polu.g:66:4: structDefinition
                    {
                    root_0 = (PoluAST)adaptor.nil();

                    pushFollow(FOLLOW_structDefinition_in_statement320);
                    structDefinition25=structDefinition();

                    state._fsp--;

                    adaptor.addChild(root_0, structDefinition25.getTree());

                    }
                    break;
                case 2 :
                    // Polu.g:67:4: qid '=' expr NL
                    {
                    pushFollow(FOLLOW_qid_in_statement325);
                    qid26=qid();

                    state._fsp--;

                    stream_qid.add(qid26.getTree());
                    char_literal27=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_statement327);  
                    stream_ASSIGN.add(char_literal27);

                    pushFollow(FOLLOW_expr_in_statement329);
                    expr28=expr();

                    state._fsp--;

                    stream_expr.add(expr28.getTree());
                    NL29=(Token)match(input,NL,FOLLOW_NL_in_statement331);  
                    stream_NL.add(NL29);



                    // AST REWRITE
                    // elements: qid, ASSIGN, expr
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (PoluAST)adaptor.nil();
                    // 67:23: -> ^( '=' qid expr )
                    {
                        // Polu.g:67:26: ^( '=' qid expr )
                        {
                        PoluAST root_1 = (PoluAST)adaptor.nil();
                        root_1 = (PoluAST)adaptor.becomeRoot(stream_ASSIGN.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_qid.nextTree());
                        adaptor.addChild(root_1, stream_expr.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // Polu.g:68:4: 'return' expr NL
                    {
                    string_literal30=(Token)match(input,RETURN,FOLLOW_RETURN_in_statement349);  
                    stream_RETURN.add(string_literal30);

                    pushFollow(FOLLOW_expr_in_statement351);
                    expr31=expr();

                    state._fsp--;

                    stream_expr.add(expr31.getTree());
                    NL32=(Token)match(input,NL,FOLLOW_NL_in_statement353);  
                    stream_NL.add(NL32);



                    // AST REWRITE
                    // elements: RETURN, expr
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (PoluAST)adaptor.nil();
                    // 68:25: -> ^( 'return' expr )
                    {
                        // Polu.g:68:28: ^( 'return' expr )
                        {
                        PoluAST root_1 = (PoluAST)adaptor.nil();
                        root_1 = (PoluAST)adaptor.becomeRoot(stream_RETURN.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_expr.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 4 :
                    // Polu.g:69:4: 'print' expr NL
                    {
                    string_literal33=(Token)match(input,PRINT,FOLLOW_PRINT_in_statement370);  
                    stream_PRINT.add(string_literal33);

                    pushFollow(FOLLOW_expr_in_statement372);
                    expr34=expr();

                    state._fsp--;

                    stream_expr.add(expr34.getTree());
                    NL35=(Token)match(input,NL,FOLLOW_NL_in_statement374);  
                    stream_NL.add(NL35);



                    // AST REWRITE
                    // elements: expr, PRINT
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
